splunk/instance/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: splunk
  namespace: splunk
spec:
  ingressClassName: nginx
  rules:
    - host: splunk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splunk-splunk-standalone-service
                port:
                  number: 8000
